[package]
name = "zoneq"
version = "1.0.0"
authors = ["Samuel Parkinson <sam.james.parkinson@gmail.com>"]
description = "Query zone files."
repository = "https://github.com/sjparknson/zoneq"
readme = "README.md"
license = "MIT"

[badges]
travis-ci = { repository = "sjparkinson/zoneq", branch = "master" }

[dependencies]
docopt = "^1.0.0"
pest = "^1.0.6"
pest_derive = "^1.0.7"